# MyoSign-

./: README.md
.workbuddy/memory/: 2026-05-25.md  MEMORY.md
Core1106-Footprint-74fb68083f57090c37eb50006aead29a/Core1106-Footprint/: Core1106-PinOut.xls
Core1106-Footprint-74fb68083f57090c37eb50006aead29a/Core1106-Footprint/3D/: Core1106-3D.stp
PCB信息/: BOM_Board1_Schematic1_2026-05-25.xlsx  PickAndPlace_PCB1_2026_05_25.csv
core1106/: CMakeLists.txt  README.md
core1106/assets/: gesture_dict.json
core1106/cmake/: rv1106-toolchain.cmake
core1106/include/: asr_engine.h  audio_out.h  config.h  emg_infer.h  event_bus.h  lcd.h  log.h  mic_in.h  power.h  protocol.h  ring_buf.h  sentence_fixer.h  tts_engine.h  uart_rx.h  ui.h
core1106/src/: asr_engine.c  audio_out.c  emg_infer.c  event_bus.c  lcd.c  log.c  main.c  mic_in.c  power.c  protocol.c  ring_buf.c  sentence_fixer.c  tts_engine.c  uart_rx.c  ui.c
esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32/main/: CMakeLists.txt  ble_recv.c  ble_recv.h  config.h  main.c  protocol.c  protocol.h  uart_tx.c  uart_tx.h
